# codesum

./: .gitignore  MCP_USAGE.md  README.md  app.py  codesum.sh  env_example  example_mcp_client.py  pyproject.toml  release.sh  requirements.txt  setup.py  test_mcp_server.py
.summary_files/: README.md_metadata.json  app.py_metadata.json  code_summary.md  codesum.sh_metadata.json  codesum_ignore.txt  compressed_code_summary.md  previous_selection.json  requirements.txt_metadata.json  selection_configs.json  setup.py_metadata.json
.summary_files/src/codesum/: app.py_metadata.json  config.py_metadata.json
src/codesum/: __init__.py  app.py  config.py  file_utils.py  folder_utils.py  mcp_http_server.py  mcp_server.py  openai_utils.py  summary_utils.py  tui.py
src/codesum/prompts/: system_readme.md  system_summary.md
